--- a/index.html
+++ b/index.html
@@ -36,6 +36,7 @@
     </main>
     <footer>
         <p>&copy; 2024 Todos os direitos não conservador, criador dos videos permitiu os direitos de imagem.</p>
+        <p>CREDITOS: ADRIANO CANDIDO CARDOSO</p>
     </footer>
 </body>
 </html>
