--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer>
-        <p>CREDITOS: ADRIANO CANDIDO CARDOSO</p>
+        <p>ADRIANO CANDIDO CARDOSO</p>
         <p>&copy; 2024 Todos os direitos não conservador, criador dos videos permitiu os direitos de imagem.</p>
     </footer>
 </body>
