--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         </section>
     </main>
     <footer>
-        <P1>ADRIANO CANDIDO CARDOSO<P1>
+        <k1>ADRIANO CANDIDO CARDOSO<k1>
         <p>&copy; 2024 Todos os direitos não conservador, criador dos videos permitiu os direitos de imagem.</p>
     </footer>
 </body>
