--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </article>
             <article class="video-item">
                 <iframe src="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" allowfullscreen></iframe>
-                <p><a href="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" target="_blank">TERCEIRO VIDEO DOCANAL</a></p>
+                <p><a href="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" target="_blank">iShowSpeed Plays SONIC.EYX.. *VIRUS*</a></p>
             </article>
             <article class="video-item">
-                <iframe src="https://www.youtube.com/embed/6FqlIFIuieU?si=nYXOahTh3h8y6wZN" allowfullscreen></iframe>
-                <p><a href="https://www.youtube.com/embed/6FqlIFIuieU?si=nYXOahTh3h8y6wZN" target="_blank">ROBLOX</a></p>
+                <iframe src="https://www.youtube.com/embed/quGvnupaKoc?si=YJcqBd41FW3yeUWE" allowfullscreen></iframe>
+                <p><a href="https://www.youtube.com/embed/quGvnupaKoc?si=YJcqBd41FW3yeUWE" target="_blank">ROBLOX</a></p>
             </article>
             <article class="video-item">
                 <iframe src="https://www.youtube.com/embed/I97ZKVb1w5Q?si=dmNj48yuqZ-7u_hg" allowfullscreen></iframe>
