--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             </article>
             <article class="video-item">
                 <iframe src="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" allowfullscreen></iframe>
-                <p><a href="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" target="_blank">iShowSpeed Plays SONIC.EYX.. *VIRUS</a></p>
+                <p><a href="https://www.youtube.com/embed/Xi-TFZfnHv8?si=AGCr1akYBjYu647b" target="_blank">iShowSpeed Plays SONIC.EYX.. VIRUS</a></p>
             </article>
             <article class="video-item">
                 <iframe src="https://www.youtube.com/embed/quGvnupaKoc?si=YJcqBd41FW3yeUWE" allowfullscreen></iframe>
